# Demo-Sat-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Drivers/c/AdcHwas/: AdcHwas.h  CMakeLists.txt
Drivers/c/AfecHwas/: AfecHwas.c  AfecHwas.h  AfecHwasRegisters.h  CMakeLists.txt
Drivers/c/AfecHwas/test/: CMakeLists.txt  main.cpp
Drivers/c/LidarExample/: CMakeLists.txt  main.c
Drivers/c/PioHwas/: CMakeLists.txt  PioHwas.c  PioHwas.h  PioHwasRegisters.h
Drivers/c/PioHwas/test/: CMakeLists.txt  main.cpp
Drivers/c/RegisterHwas/: CMakeLists.txt  RegisterHwas.c  RegisterHwas.h
Drivers/c/TestUtils/: CMakeLists.txt  Stubs.c  main.h
Drivers/c/UartHwas/: CMakeLists.txt  UartHwas.c  UartHwas.h  UartHwasRegisters.h
Drivers/c/UartHwas/test/: CMakeLists.txt  main.cpp
Drivers/seds/: AfecHwas.xml  AfecHwasComponent.xml  CMakeLists.txt  Lidar.xml  LidarComponent.xml  MP6500.xml  MP6500Component.xml  PioHwas.xml  PioHwasComponent.xml  Propulsion.xml  PropulsionComponent.xml  SunSensor.xml  SunSensorComponent.xml  SunSensorHwas.xml  SunSensorHwasComponent.xml  TfLuna.xml  TfLunaComponent.xml  TfLunaHwas.xml  TfLunaHwasComponent.xml  UartHwas.xml  UartHwasComponent.xml
Drivers/seds/AfecHwas/: AfecHwas.xml
Drivers/seds/AfecHwas/example/: .gdb_history  .gitignore  COM-N7SPACE-AFECHWAS.acn  DataView.aadl  Default_Deployment.aadl  DeploymentView.aadl  InterfaceView.aadl  samv71Afec.acn  samv71Afec.asn  samv71Afec.pro
Drivers/seds/AfecHwas/example/work/: Makefile  taste.pro
Drivers/seds/AfecHwasExample/: .gdb_history  .gitignore  AfecHwasExample.acn  AfecHwasExample.asn  AfecHwasExample.msc  AfecHwasExample.pro  COM-N7SPACE-AFECHWAS.acn  COM-N7SPACE-AFECHWAS.asn  COM-N7SPACE-AFECHWASCOMPONENT-AFECHWASDRIVER.asn  COM-N7SPACE-HWAS.acn  COM-N7SPACE-HWAS.asn  Makefile  interfaceview.xml  samv71.dv.xml  samv71Afec.msc  samv71Afec.pro
Drivers/seds/AfecHwasExample/work/: Makefile
Drivers/seds/EndSwitchesExamples/: EndSwitchesExamples.acn  EndSwitchesExamples.asn  EndSwitchesExamples.msc  EndSwitchesExamples.pro  Makefile  interfaceview.xml  samv71.dv.xml
Drivers/seds/EndSwitchesExamples/work/: Makefile  taste.pro
Drivers/seds/LidarExample/: .gdbinit-FreeRTOS-helpers  COM-N7SPACE-HWAS.asn  COM-N7SPACE-LIDAR.acn  COM-N7SPACE-LIDAR.asn  COM-N7SPACE-LIDARCOMPONENT-LIDARDRIVER.asn  COM-N7SPACE-LIDARCOMPONENT.asn  COM-N7SPACE-MP6500.acn  COM-N7SPACE-MP6500.asn  COM-N7SPACE-MP6500COMPONENT-MP6500DRIVER.asn  COM-N7SPACE-TFLUNACOMPONENT-TFLUNADRIVER.asn  COM-N7SPACE-UARTHWAS.acn  LidarExample.acn  LidarExample.asn  LidarExample.msc  LidarExample.pro  Makefile  bug.txt  interfaceview.xml  samv71.dv.xml  skeletons.pro
Drivers/seds/LidarExample/work/: Makefile  taste.pro
Drivers/seds/LidarExample/work/hwas/: hwas.pro
Drivers/seds/LidarExample/work/lidardriver/: lidardriver.pro
Drivers/seds/MP6500Example/: COM-N7SPACE-UARTHWAS.acn  COM-N7SPACE-UARTHWAS.asn  MP6500Example.acn  MP6500Example.asn  MP6500Example.msc  MP6500Example.pro  Makefile  interfaceview.xml  samv71.dv.xml
Drivers/seds/MP6500Example/work/: Makefile  taste.pro
Drivers/seds/MP6500Example/work/mp6500driver/: mp6500driver.pro
Drivers/seds/NewUart/: UartHwas.xml  UartHwasComponent.xml
Drivers/seds/PioHwas/: GPIO.xml  Hwas.xml  PioHwas.xml  PioHwasComponent.xml  PrepareUpdate.sh  UpdateExample.sh
Drivers/seds/PioHwas/example/: .gdb_history  .gitignore  COM-N7SPACE-HWAS.acn  COM-N7SPACE-HWAS.asn  COM-N7SPACE-PIOHWAS.acn  COM-N7SPACE-PIOHWAS.asn  Makefile  example.acn  example.asn  example.pro  interfaceview.xml  samv71.dv.xml
Drivers/seds/PioHwas/example/work/: Makefile
Drivers/seds/PioHwas/test/: CMakeLists.txt  com_n7space_piohwas.adb  com_n7space_piohwas.ads  dataview-uniq.c  dataview-uniq.h  main.c  piohwasdriver.adb  piohwasdriver.ads  piohwasdriver_datamodel.adb  piohwasdriver_datamodel.ads  piohwasdriver_ri.adb  piohwasdriver_ri.ads  taste_basictypes.ads
Drivers/seds/PioHwasExample/: .gitignore  COM-N7SPACE-PIOHWAS.acn  COM-N7SPACE-PIOHWAS.asn  example.pro  samv71.dv.xml
Drivers/seds/PioHwasExample/work/: Makefile
Drivers/seds/PropulsionExample/: COM-N7SPACE-HWAS.asn  COM-N7SPACE-PROPULSION.acn  COM-N7SPACE-PROPULSION.asn  COM-N7SPACE-PROPULSIONCOMPONENT-PROPULSIONDRIVER.acn  COM-N7SPACE-PROPULSIONCOMPONENT.asn  Makefile  interfaceview.xml  project.acn  project.asn  project.msc  project.pro  samv71.dv.xml
Drivers/seds/PropulsionExample/work/: Makefile  taste.pro
Drivers/seds/SunSensorExample/: COM-N7SPACE-AFECHWAS.acn  COM-N7SPACE-AFECHWAS.asn  COM-N7SPACE-AFECHWASCOMPONENT-AFECHWASDRIVER.acn  COM-N7SPACE-SUNSENSOR.acn  COM-N7SPACE-SUNSENSOR.asn  COM-N7SPACE-SUNSENSORCOMPONENT-SUNSENSORDRIVER.acn  Makefile  SunSensorExample.acn  SunSensorExample.asn  SunSensorExample.msc  SunSensorExample.pro  interfaceview.xml  samv71.dv.xml
Drivers/seds/SunSensorExample/work/: Makefile  taste.pro
Drivers/seds/SunSensorHwasExample/: .gitignore  COM-N7SPACE-AFECHWAS.acn  COM-N7SPACE-AFECHWAS.asn  COM-N7SPACE-AFECHWASCOMPONENT.acn  COM-N7SPACE-SUNSENSORCOMPONENT.asn  COM-N7SPACE-SUNSENSORHWAS.acn  COM-N7SPACE-SUNSENSORHWAS.asn  Makefile  SunSensorHwasExample.acn  SunSensorHwasExample.asn  SunSensorHwasExample.msc  SunSensorHwasExample.pro  interfaceview.xml  samv71.dv.xml
Drivers/seds/SunSensorHwasExample/work/: Makefile  taste.pro
Drivers/seds/TfLunaExample/: .gitignore  COM-N7SPACE-PIOHWAS.acn  COM-N7SPACE-TFLUNA.acn  COM-N7SPACE-TFLUNA.asn  COM-N7SPACE-TFLUNACOMPONENT.asn  COM-N7SPACE-TFLUNAHWASCOMPONENT.asn  Makefile  TfLunaExample.acn  TfLunaExample.asn  TfLunaExample.msc  TfLunaExample.pro  interfaceview.xml  samv71.dv.xml
Drivers/seds/TfLunaExample/work/: Makefile  taste.pro
Drivers/seds/UartHwas/: UartHwas.xml
Drivers/seds/UartHwas/example/: COM-N7SPACE-PIOHWAS.asn  example.asn  samv71.dv.xml  test_binaries.sh
Drivers/seds/UartHwasExample/: CMakeLists.txt  test_binaries.sh
Drivers/seds/UartHwasExample/samv71Partition/: buildLinuxPartition.sh  example.acn  example.asn  example.msc  example.pro  interfaceview.xml  samv71.dv.xml
(+306 files in other folders)
